# inih

./: CMakeLists.txt
cpp/: INIReader.cpp  INIReader.h  INIReaderTest.cpp
cpp/proposed/: INIReader.cpp
examples/: ini_buffer.c  ini_dump.c  ini_example.c  ini_xmacros.c
extra/: make_benchmark.sh  make_benchmark_msvc.cmd
tests/: unittest.c
